# qdu-rm-ai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Style Guide.md  dji_roco_to_voc.py  requirements.txt  vision.py
mid/: README.md
rmai/: __init__.py  dataset.py
rmai/behavior_tree/: __init__.py  action.py  base.py  control.py  decorator.py
runtime/: MV-CA016-10UC-6mm.json  RMUL2021_Armor.json  RMUT2021_Buff.json  RMUT_Buff.json  armor_classifier.onnx  armor_classifier_lable.json  auto_aim.sh  sentry.xml
scriptes/: dji_roco_to_voc.py  train_vision.py
src/: CMakeLists.txt
src/app/: app.hpp
src/app/auto_aim/: CMakeLists.txt  main.cpp
src/app/buff/: CMakeLists.txt  main.cpp
src/app/dart/: CMakeLists.txt  main.cpp
src/app/full_auto/: CMakeLists.txt  main.cpp
src/app/radar/: CMakeLists.txt  main.cpp
src/app/sentry/: CMakeLists.txt  main.cpp
src/behavior/: CMakeLists.txt  README.md  behavior.cpp  behavior.hpp  node.cpp  node.hpp
src/camera/: CMakeLists.txt  camera.cpp  camera.hpp
src/com/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cpp  common.hpp
src/component/: CMakeLists.txt  common.cpp  common.hpp
src/cuda/: CMakeLists.txt  detector.cpp  detector.hpp
src/demo/armor/: CMakeLists.txt  main.cpp  params_test_blue.json  params_test_red.json
src/demo/camera/: CMakeLists.txt  main.cpp
src/device/: CMakeLists.txt  README.md  camera.cpp  camera.hpp  crc16.cpp  crc16.h  crc16.hpp  hik_camera.cpp  hik_camera.hpp  mcu.cpp  mcu.hpp  raspi_camera.hpp  referee.cpp  referee.hpp  robot.cpp  robot.hpp  serial.cpp  serial.hpp  servo.cpp  servo.hpp
src/nn/: CMakeLists.txt  README.md
src/robot/: CMakeLists.txt  robot.cpp  robot.hpp
src/vision/: CMakeLists.txt  README.md  armor.cpp  armor.hpp  armor_classifier.cpp  armor_classifier.hpp  armor_detector.cpp  armor_detector.hpp  ballistic_compensator.cpp  ballistic_compensator.hpp  buff.cpp  buff.hpp  buff_detector.cpp  buff_detector.hpp  compensator.cpp  compensator.hpp  detector.cpp  detector.hpp  detector.tpp  game.cpp  game.hpp  guiding_light.cpp  guiding_light.hpp  light_bar.cpp  light_bar.hpp  obj_detector.cpp  obj_detector.hpp  object.hpp  ore_cube.cpp  ore_cube.hpp  predictor.cpp  predictor.hpp  range_estimator.cpp  range_estimator.hpp  robot.cpp  robot.hpp  robot_detector.cpp  robot_detector.hpp  track.cpp  track.hpp  (+2 more)
tests/: CMakeLists.txt
tests/behavior/: CMakeLists.txt  behavior.cpp  node.cpp
tests/common/: CMakeLists.txt
tests/component/: CMakeLists.txt  common.cpp
tests/cuda/: CMakeLists.txt  detector.cpp
tests/device/: CMakeLists.txt  camera.cpp  hik_camera.cpp  referee.cpp  robot.cpp  serial.cpp
tests/nn/: CMakeLists.txt  detector.cpp
tests/vision/: CMakeLists.txt  armor.cpp  armor_classifier.cpp  armor_detector.cpp  ballistic_compensator.cpp  buff_detector.cpp  compensator.cpp  game.cpp  light_bar.cpp  params_test.json  preprocess.cpp  range_estimator.cpp  robot.cpp  robot_detector.cpp  test_cam_cali.json  vision.cpp
train/: roco_dataset.yaml  train_vision.py  train_vision.sh
utils/: armor_classfier.py  armor_dataset.yaml  dataset.yaml  hyp.yaml  radar_hyp.yaml  radar_model.yaml  roco2x.py  train_vision.sh
